# Imunidade-na-Gravidez-Diferencas-entre-Populacoes

./: README.md  app.py  dashboard.py  immune_function_pregnancy_distinct_populations.ipynb  pyproject.toml
assets/: Hove_et_al_2020.csv  desktop.ini
model/: modelo_gradient_boosting.pkl  scaler.pkl
pages/: 1_intro.py  2_info_dados.py  3_analises.py  4_modelo_ml.py  5_conclusoes.py
