[project]
name = "final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Joangopa",email = "andresgomez1796@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pandas-access (>=0.0.1,<0.0.2)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.48.0,<0.49.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

